Fix a crash when duplicating active global selection masks

The problem was in the fact that KisGroupLayer::allowAsChild()
forbade adding the second active mask to the same layer, letting
the code silently continue without knowing that the mask was not
created. In this patch we manually deactivate all the active masks
before duplication process.

BUG:382315